// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an overflow menu with a custom elevation 1`] = `
<PopoverAnimationDefault
  open={false}
  style={Object {}}
  targetOrigin={
    Object {
      "horizontal": "middle",
      "vertical": "top",
    }
  }
  zDepth={5}
/>
`;

exports[`renders with a specific style if linking 1`] = `
<div
  className="LinkDetail LinkDetail-linking"
  style={
    Object {
      "height": 10,
      "left": 10,
      "top": 30,
      "width": 10,
    }
  }
>
  <svg
    className="LinkDetail-link"
    style={
      Object {
        "transform": "scale(1, 1)",
      }
    }
  >
    <line
      className="LinkDetail-hover"
      x1={0}
      x2="100%"
      y1={0}
      y2="100%"
    />
    <line
      className="LinkDetail-line"
      x1={0}
      x2="100%"
      y1={0}
      y2="100%"
    />
  </svg>
  <IconMenu
    anchorOrigin={
      Object {
        "horizontal": "middle",
        "vertical": "bottom",
      }
    }
    animated={true}
    animation={[Function]}
    className="LinkDetail-menu"
    clickCloseDelay={200}
    disableAutoFocus={true}
    iconButtonElement={
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        iconStyle={Object {}}
        tooltipPosition="bottom-center"
        touch={false}
      >
        <NavigationMoreVert />
      </IconButton>
    }
    multiple={false}
    onClick={[Function]}
    onItemClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onRequestChange={[Function]}
    open={null}
    targetOrigin={
      Object {
        "horizontal": "middle",
        "vertical": "top",
      }
    }
    useLayerForClickAway={false}
  >
    <MenuItem
      anchorOrigin={
        Object {
          "horizontal": "right",
          "vertical": "top",
        }
      }
      checked={false}
      className="LinkDetail-delete"
      desktop={false}
      disabled={false}
      focusState="none"
      insetChildren={false}
      leftIcon={<ActionDeleteForever />}
      onClick={[Function]}
      primaryText="Delete link"
      targetOrigin={
        Object {
          "horizontal": "left",
          "vertical": "top",
        }
      }
    />
  </IconMenu>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  className="LinkDetail"
  style={
    Object {
      "height": 10,
      "left": 10,
      "top": 30,
      "width": 10,
    }
  }
>
  <svg
    className="LinkDetail-link"
    style={
      Object {
        "transform": "scale(1, 1)",
      }
    }
  >
    <line
      className="LinkDetail-hover"
      x1={0}
      x2="100%"
      y1={0}
      y2="100%"
    />
    <line
      className="LinkDetail-line"
      x1={0}
      x2="100%"
      y1={0}
      y2="100%"
    />
  </svg>
  <IconMenu
    anchorOrigin={
      Object {
        "horizontal": "middle",
        "vertical": "bottom",
      }
    }
    animated={true}
    animation={[Function]}
    className="LinkDetail-menu"
    clickCloseDelay={200}
    disableAutoFocus={true}
    iconButtonElement={
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        iconStyle={Object {}}
        tooltipPosition="bottom-center"
        touch={false}
      >
        <NavigationMoreVert />
      </IconButton>
    }
    multiple={false}
    onClick={[Function]}
    onItemClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onRequestChange={[Function]}
    open={null}
    targetOrigin={
      Object {
        "horizontal": "middle",
        "vertical": "top",
      }
    }
    useLayerForClickAway={false}
  >
    <MenuItem
      anchorOrigin={
        Object {
          "horizontal": "right",
          "vertical": "top",
        }
      }
      checked={false}
      className="LinkDetail-delete"
      desktop={false}
      disabled={false}
      focusState="none"
      insetChildren={false}
      leftIcon={<ActionDeleteForever />}
      onClick={[Function]}
      primaryText="Delete link"
      targetOrigin={
        Object {
          "horizontal": "left",
          "vertical": "top",
        }
      }
    />
  </IconMenu>
</div>
`;

exports[`renders without crashing when inverted 1`] = `
<div
  className="LinkDetail"
  style={
    Object {
      "height": 10,
      "left": 10,
      "top": 30,
      "width": 10,
    }
  }
>
  <svg
    className="LinkDetail-link"
    style={
      Object {
        "transform": "scale(-1, -1)",
      }
    }
  >
    <line
      className="LinkDetail-hover"
      x1={0}
      x2="100%"
      y1={0}
      y2="100%"
    />
    <line
      className="LinkDetail-line"
      x1={0}
      x2="100%"
      y1={0}
      y2="100%"
    />
  </svg>
  <IconMenu
    anchorOrigin={
      Object {
        "horizontal": "middle",
        "vertical": "bottom",
      }
    }
    animated={true}
    animation={[Function]}
    className="LinkDetail-menu"
    clickCloseDelay={200}
    disableAutoFocus={true}
    iconButtonElement={
      <IconButton
        disableTouchRipple={false}
        disabled={false}
        iconStyle={Object {}}
        tooltipPosition="bottom-center"
        touch={false}
      >
        <NavigationMoreVert />
      </IconButton>
    }
    multiple={false}
    onClick={[Function]}
    onItemClick={[Function]}
    onKeyboardFocus={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onRequestChange={[Function]}
    open={null}
    targetOrigin={
      Object {
        "horizontal": "middle",
        "vertical": "top",
      }
    }
    useLayerForClickAway={false}
  >
    <MenuItem
      anchorOrigin={
        Object {
          "horizontal": "right",
          "vertical": "top",
        }
      }
      checked={false}
      className="LinkDetail-delete"
      desktop={false}
      disabled={false}
      focusState="none"
      insetChildren={false}
      leftIcon={<ActionDeleteForever />}
      onClick={[Function]}
      primaryText="Delete link"
      targetOrigin={
        Object {
          "horizontal": "left",
          "vertical": "top",
        }
      }
    />
  </IconMenu>
</div>
`;
